--- a/src/Components/Global/Header/header.css
+++ b/src/Components/Global/Header/header.css
@@ -1,3 +1,59 @@
+.nav-btn{
+    width: 35px;
+    height: 35px;
+    padding: 3px;
+    background: transparent;
+    cursor: pointer;
+    /* display: flex; */ /* actually this comes from the tailwind that's why it's commented */
+    flex-direction: column;
+    transition: all 300ms ease-in-out;
+}
+.nav-btn span{
+    position: relative;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    @apply bg-dark-primary-800;
+    transition: all 300ms ease-in-out;
+}
+.nav-btn span::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    left: 0;
+    top: -8px;
+    @apply bg-dark-primary-800;
+    transition: all 300ms ease-in-out;
+}
+.nav-btn span::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    top: 8px;
+    @apply bg-dark-primary-800;
+    transition: all 300ms ease-in-out;
+}
+.nav-btn.active{
+    rotate: 90deg;
+}
+.nav-btn.active span{
+    background: transparent;
+}
+.nav-btn.active span::before{
+    top: 0;
+    transform: rotate(45deg);
+}
+.nav-btn.active span::after{
+    height: 3px;
+    top: 0;
+    transform: rotate(-45deg);
+}
+
 .reveal{
     @apply bg-light-primary-500 shadow dark:bg-dark-primary-800;
 }
