--- a/src/Components/Global/Header/header.css
+++ b/src/Components/Global/Header/header.css
@@ -15,17 +15,17 @@
     left: 0;
     top: 50%;
     transform: translateY(-50%);
-    @apply bg-dark-primary-800;
+    @apply bg-dark-primary-800 dark:bg-light-primary-600;
     transition: all 300ms ease-in-out;
 }
 .nav-btn span::before{
     content: '';
     position: absolute;
     width: 100%;
-    height: 3px;
+    height: 2px;
     left: 0;
     top: -8px;
-    @apply bg-dark-primary-800;
+    @apply bg-dark-primary-800 dark:bg-light-primary-600;
     transition: all 300ms ease-in-out;
 }
 .nav-btn span::after{
@@ -35,7 +35,7 @@
     height: 2px;
     left: 0;
     top: 8px;
-    @apply bg-dark-primary-800;
+    @apply bg-dark-primary-800 dark:bg-light-primary-600;
     transition: all 300ms ease-in-out;
 }
 .nav-btn.active{
@@ -45,6 +45,7 @@
     background: transparent;
 }
 .nav-btn.active span::before{
+    height: 3px;
     top: 0;
     transform: rotate(45deg);
 }
@@ -61,6 +62,6 @@
     @apply bg-light-secondary-500 shadow dark:bg-dark-primary-600 font-medium;
 }
 
-.selected-language{
-    @apply bg-light-secondary-500 shadow dark:bg-dark-primary-600 ;
+.selected-option{
+    @apply bg-light-secondary-500 shadow dark:bg-dark-secondary-600 ;
 }
