--- a/src/ScrollBarStyles/scrollbar.css
+++ b/src/ScrollBarStyles/scrollbar.css
@@ -3,10 +3,10 @@
 }
 
 ::-webkit-scrollbar-track {
-  @apply bg-light-primary-500 dark:bg-dark-primary-800
+  @apply bg-light-secondary-500 ;
 }
 
 ::-webkit-scrollbar-thumb {
-    border: 2px solid transparent;
-  @apply bg-light-secondary-500 border-light-primary-500 rounded-full transition-all duration-300 hover:border-none dark:bg-dark-primary-400 dark:border-dark-primary-800 ;
+  border: 2px solid transparent;
+  @apply bg-light-quarternary-500 border-light-secondary-500 rounded-full transition-all duration-300 hover:border-[1px];
 }
